connector modified. path added to uri